...
          options={{
            title: 'Home',
            headerShown: false,
            tabBarIcon: ({ color }) => (
              <House color={color} size={TAB_ICON_SIZE} />
            ),
            tabBarButtonTestID: 'home-tab',
          }}
        />
        <Tabs.Screen
          name="calendar"
          options={{
            title: 'Calendar',
...
        />
        <Tabs.Screen
          name="settings"
          options={{
            href: null,
            headerShown: false,
            tabBarButtonTestID: 'settings-tab',
          }}
        />
        <Tabs.Screen
          name="insights"
          options={{
            href: null,
...
